# attendance-facial-recognition

./: .gitignore  Pipfile  README.md  app.py  database.py  dev-requirements.txt  form.py  pyproject.toml  requirements.txt  training.py
.github/: dependabot.yml
static/css/: home.css  monthly_attendance.css
templates/: first.html  home.html  show.html  staff.html  student.html
