[tool.poetry]
name = "attendance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
face-recognition = "^1.3.0"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
imageio = "^2.9.0"
mtcnn = "^0.1.0"
pandas = "^1.2.4"
Pillow = ">=8.2,<10.0"
sklearn = "^0.0"
tensorflow = "^2.7.0"
Flask-WTF = ">=0.15.1,<1.1.0"
SQLAlchemy = "^1.4.18"

[tool.poetry.dev-dependencies]
black = {version = "^22.3", allow-prereleases = true}
pylint = {version = "^2.13.8", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
